--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,16 @@
 jupyter==1.0.0
-torch>=1.7
-basicsr>=1.4.2
-facexlib>=0.2.5
-gfpgan>=1.3.7
-numpy
-opencv-python
-torchvision
-scipy
-tqdm
-lmdb
-pyyaml
-yapf
-paddlepaddle
-paddlehub
+torch==1.13.0
+basicsr==1.4.2
+facexlib==0.3.0
+gfpgan==1.3.8
+numpy==1.23.5
+opencv-python==4.6.0.66
+torchvision==0.14.0
+scipy==1.9.1
+tqdm==4.65.0
+lmdb==1.3.0
+pyyaml==6.0
+yapf==0.33.0
+paddlepaddle==2.4.2
+paddlehub==2.3.1
 fastapi[all]==0.85.*
